// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-row-left"
  data-type="row"
>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
  >
    Title 1
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
  >
    Description 1
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
  >
    Title 3
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList is rendered 1`] = `
<dl
  aria-label="aria-label"
  class="euiDescriptionList testClass1 testClass2 emotion-euiDescriptionList-row-left-euiTestCss"
  data-test-subj="test subject string"
  data-type="row"
>
  Content
</dl>
`;

exports[`EuiDescriptionList props align center is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-row-center"
  data-type="row"
/>
`;

exports[`EuiDescriptionList props align left is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-row-left"
  data-type="row"
/>
`;

exports[`EuiDescriptionList props columnGutterSize m is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-column-left-s-m"
  data-type="column"
/>
`;

exports[`EuiDescriptionList props columnGutterSize s is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-column-left-s-s"
  data-type="column"
/>
`;

exports[`EuiDescriptionList props compressed is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-row-left"
  data-type="row"
/>
`;

exports[`EuiDescriptionList props listItems descriptionProps is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-row-left"
  data-type="row"
>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
  >
    Title 1
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 emotion-euiDescriptionList__description-row-normal-euiTestCss"
    data-test-subj="test subject string"
  >
    Description 1
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 emotion-euiDescriptionList__description-row-normal-euiTestCss"
    data-test-subj="test subject string"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
  >
    Title 3
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 emotion-euiDescriptionList__description-row-normal-euiTestCss"
    data-test-subj="test subject string"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList props listItems titleProps is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-row-left"
  data-type="row"
>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList__title-row-normal-s-euiTestCss"
    data-test-subj="test subject string"
  >
    Title 1
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
  >
    Description 1
  </dd>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList__title-row-normal-s-euiTestCss"
    data-test-subj="test subject string"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList__title-row-normal-s-euiTestCss"
    data-test-subj="test subject string"
  >
    Title 3
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList props rowGutterSize m is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-column-left-m-s"
  data-type="column"
/>
`;

exports[`EuiDescriptionList props rowGutterSize s is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-column-left-s-s"
  data-type="column"
/>
`;

exports[`EuiDescriptionList props type column is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-column-left-s-s"
  data-type="column"
/>
`;

exports[`EuiDescriptionList props type inline is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-inline-left"
  data-type="inline"
/>
`;

exports[`EuiDescriptionList props type responsiveColumn renders a column when the current window is above the responsive breakpoints 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-column-left-s-s"
  data-type="responsiveColumn"
/>
`;

exports[`EuiDescriptionList props type responsiveColumn renders a row when the current window is within the responsive breakpoints 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-row-left"
  data-type="responsiveColumn"
/>
`;

exports[`EuiDescriptionList props type row is rendered 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-row-left"
  data-type="row"
/>
`;
